# promise

./: CMakeLists.txt  LICENSE  README.md
lib/: Promise.hpp  PromiseExecutor.hpp
lib/Callbacks/: Finisher.hpp  Rejector.hpp  (+3 more)
test/: CMakeLists.txt  gtest.cmake
test/CompilationTests/ConstructorTests/AuxiliaryClasses/Catcher/Copy/: CopyErrorTResolveTRethrowT.hpp
test/CompilationTests/ConstructorTests/AuxiliaryClasses/Catcher/Emplace/: EmplaceErrorTResolveTRethrowT.hpp
test/CompilationTests/ConstructorTests/AuxiliaryClasses/Catcher/Move/: MoveErrorTResolveTRethrowT.hpp
test/CompilationTests/ConstructorTests/AuxiliaryClasses/Ever/Copy/: CopyResolveTErrorT.hpp
test/CompilationTests/ConstructorTests/AuxiliaryClasses/Ever/Emplace/: EmplaceResolveTErrorT.hpp
test/CompilationTests/ConstructorTests/AuxiliaryClasses/Ever/Move/: MoveResolveTErrorT.hpp
test/CompilationTests/ConstructorTests/Catcher/: Copy.cpp  Emplace.cpp  Move.cpp
test/CompilationTests/ConstructorTests/Ever/: Copy.cpp  Emplace.cpp  Move.cpp
test/CompilationTests/ConstructorTests/MakePromiseTests/: Copy.cpp  Emplace.cpp  Move.cpp
test/CompilationTests/ConstructorTests/Then/: Copy.cpp  Emplace.cpp  Move.cpp
test/CompilationTests/LambdaTests/Catcher/: LValue.cpp  RValue.cpp
test/CompilationTests/LambdaTests/Ever/: LValue.cpp  RValue.cpp
test/CompilationTests/LambdaTests/MakePromise/: LValue.cpp  RValue.cpp
test/CompilationTests/LambdaTests/Then/: LValue.cpp  RValue.cpp
test/OperationalTests/: Catcher.cpp  Ever.cpp  MakePromise.cpp  Then.cpp
test/Scheduler/: Scheduler.cpp  Scheduler.hpp
(+100 files in other folders)
